# First-Helios

./: ,  .coverage  .env.example  .gitignore  .pre-commit-config.yaml  AGENT.md  AGENT_OBSERVATION_HANDOFF.md  CLAUDE_AGENT_HANDOFF.md  CLAUDE_DATA_ENGINEERING_HANDOFF.md  CLAUDE_HANDOFF_SESSION_3.md  LEARNING_GUIDE.md  PIPELINE_TRACING_PLAN.md  PLAYBOOK.md  README.md  ROADMAP.md  RUNBOOK.md  SECURITY_FINDINGS.md  SECURITY_PLAN.md  SPIRITPOOL_HANDOFF_SESSION3.md  SPIRITPOOL_STARTUP.md  SYSTEM_DESIGN.md  TODO.md  alembic.ini  collector_main.py  makefile  migrate_structure.sh  mypy.ini  plan-mealDealSignalQualityOverhaul.prompt.md  pyproject.toml  requirements.txt  ruff.toml  server.py
AgentDiscardPile/: HANDOFF.md  SPIRITPOOL_HANDOFF.md
Data Analysis/: spiritpool_analysis.ipynb
Data_analysis/: employment_data_review.ipynb
Discard/: ARCHITECTURE_PLAN.md  CLAUDE_AGENT_HANDOFF_1.md  CLAUD_AGENT_HANDOFF_2.md  HANDOFF_SESSION_1.md
Todos/: StaffingEngine.md
agentMailbox/: FH-3_meal_deal_map_layer.md  SPIRITPOOL_CONTEXT.md
agent_interface/: __init__.py  executor.py  ollama_agent.py  queue_manager.py  schemas.py  validator.py
agentinbox/: FH-0_intake_foundation.md  FH-1_backend_hardening.md
alembic/: env.py
backend/: api.py  baseline.py  category_catalog.py  collection_planner.py  database.py  dedup.py  discovery.py  endpoint_catalog.py  freshness.py  industries.py  ingest.py  models.py  rate_manager.py  scheduler.py  seed_test.py  source_metrics.py  targeting.py
collectors/: __init__.py  base.py  cache.py  geocoding.py  playwright_fallback.py  rotation.py  (+1 more)
(+460 files in other folders)
