[project]
name = "helios-learning"
version = "0.1.0"
description = "Helios V2 learning/tooling workspace"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "psycopg[binary]>=3.3.4",
    "sqlalchemy>=2.0.51",
]

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]
